# agnes-rs

./: CHANGELOG.md  Cargo.toml  README.md  package.json  release-please-config.json
.github/workflows/: bridge.yml  ci.yml  python.yml  release-please.yml  release.yml
agnes-adapter-mysql/: Cargo.toml
agnes-adapter-mysql/src/: bind.rs  lib.rs  row_ref.rs
agnes-adapter-postgres/: Cargo.toml
agnes-adapter-postgres/src/: bind.rs  lib.rs  row_ref.rs
agnes-adapter-sqlite/: Cargo.toml
agnes-adapter-sqlite/src/: bind.rs  lib.rs  row_ref.rs
agnes-bridge/: .gitattributes  Cargo.toml  index.d.ts  index.js  package.json
agnes-bridge/src/: convert.rs  lib.rs
agnes-cache/: Cargo.toml
agnes-cache/src/: lib.rs  motor.rs  protocolo.rs  wal.rs
agnes-cli/: .gitignore  README.md  agnes.config.example.ts  package.json  tsconfig.json
agnes-cli/src/: apply.ts  cli.ts  config.ts  db.ts  dialect.ts  diff.ts  generate.ts  index.ts  introspect.ts  ir.ts  normalize.ts  print.ts  print_py.ts  prompt.ts
agnes-cli/src/commands/: generate.ts  init.ts  migrate.ts  pull.ts  push.ts
agnes-core/: Cargo.toml
agnes-core/src/: adapter.rs  cache.rs  error.rs  executor.rs  key.rs  lib.rs  parser.rs  replicated.rs  stream.rs  types.rs  utils.rs
agnes-library/: README.md  example.ts  package.json
agnes-library/src/: bridge.ts  client.ts  index.ts
agnes-library/src/query/: aggregate.ts  builder.d.ts  builder.ts  conditions.ts  ddl.ts  join.ts  relations.ts  utils.ts
agnes-library/src/query/builders/: delete.ts  index.ts  insert.ts  select-start.ts  select.ts  update.ts
agnes-library/src/schema/: index.ts
agnes-library/test/: builder.test.ts  ddl.test.ts
agnes-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
agnes-py/python/agnes/: __init__.py  client.py  ddl.py  query.py  schema.py
agnes-py/src/: lib.rs
agnes-py/tests/: test_builder.py  test_ddl.py
example/: agnes.config.ts  package.json
example/migrations/: 20260701102435_auto.sql
example/src/: db.ts  index.ts  schema.ts  seed.ts
