[workspace]
resolver = "2"
members = [
    "agnes-cache",
    "agnes-core",
    "agnes-bridge",
    "agnes-py",
    "agnes-adapter-postgres",
    "agnes-adapter-mysql",
    "agnes-adapter-sqlite",
]

[workspace.package]
version = "0.0.14" # x-release-please-version
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KingTimer12/agnes-rs"

[workspace.dependencies]
napi = { version = "3", default-features = false, features = ["napi9", "async", "serde-json"] }
napi-derive = "3"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "io-util", "sync", "fs", "macros", "time"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "2"
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false }
blake3 = "1"
sqlparser = "0.52"
parking_lot = "0.12"
tracing = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "macros", "json", "chrono", "uuid"] }

agnes-cache = { path = "agnes-cache" }
agnes-core = { path = "agnes-core" }
agnes-adapter-postgres = { path = "agnes-adapter-postgres" }
agnes-adapter-mysql = { path = "agnes-adapter-mysql" }
agnes-adapter-sqlite = { path = "agnes-adapter-sqlite" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
strip = false
debug = true
