[package]
name = "agnes-adapter-mysql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agnes-core = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, features = ["mysql"] }
