[package]
name = "agnes-adapter-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agnes-core = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
