[package]
name = "agnes_bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

agnes-core = { workspace = true }
agnes-cache = { workspace = true }
agnes-adapter-postgres = { workspace = true }
agnes-adapter-mysql = { workspace = true }
agnes-adapter-sqlite = { workspace = true }

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = "z"     
lto = true          
codegen-units = 1   
strip = true        
panic = "abort"     