[package]
name = "agnes-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agnes-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
