[package]
name = "agnes-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
sqlparser = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }