[package]
name = "agnes-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "agnes_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
pythonize = "0.28"
serde_json = { workspace = true }
tokio = { workspace = true }
agnes-core = { workspace = true }
agnes-adapter-postgres = { workspace = true }
agnes-adapter-mysql = { workspace = true }
agnes-adapter-sqlite = { workspace = true }
agnes-cache = { workspace = true }
